argocd-managed/unifi/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: unifi
  name: unifi
spec:
  replicas: 1
  serviceName: unifi
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
      annotations:
        backup.velero.io/backup-volumes: unifi
    spec:
      containers:
        - env:
            - name: MEM_LIMIT
              value: "1024"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: "linuxserver/unifi-controller:7.4.162"
          name: unifi
          ports:
            # https://help.ui.com/hc/en-us/articles/218506997-UniFi-Network-Required-Ports-Reference
            # Device communication
            - containerPort: 8080
            # Web UI
            - containerPort: 8443
            # Port used for stun
            # - containerPort: 3478
            #   protocol: UDP
            # Port used for syslog capture
            # - containerPort: 5514
            #   protocol: UDP
            # Guest portal HTTP redirection
            # - containerPort: 8880
            # Guest portal HTTPS redirection
            # - containerPort: 8843
            # Unifi mobile speed test
            # - containerPort: 6789
            # Port used for device discovery
            # - containerPort: 10001
            #   protocol: UDP
            # Make application discoverable on L2 network
            # - containerPort: 1900
            #   protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: unifi
      restartPolicy: Always
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
