argocd-managed/unifi/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-ui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.oscarr.nl`)
      kind: Rule
      services:
        - name: unifi
          port: 8443
          serversTransport: insecure
          scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-inform
spec:
  entryPoints:
    - unifi-inform
  routes:
    - match: Host(`unifi.oscarr.nl`)
      kind: Rule
      services:
        - name: unifi
          port: 8080
